# poc_kr8s

./: .gitignore  Dockerfile  README.md  build.sh  install.sh  logging_config.yaml  pyproject.toml  requirements.txt  run.sh
manifests/: deployment.yaml
src/kr8s_poc/: main_server.py
