[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kr8s_poc"
version = "0.0.6"
authors = [
  { name="Nico Coetzee", email="nicc777@gmail.com" },
]
description = "An experimental project to test the capabilities of kr8s"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "kr8s",
  "uvicorn[standard]",
  "fastapi",
]

[project.urls]
"Homepage" = "https://github.com/nicc777/poc_kr8s"
"Bug Tracker" = "https://github.com/nicc777/poc_kr8s/issues"

